[package]
name = "wsl-memory-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "wsl_memory_agent"
path = "src/lib.rs"

[[bin]]
name = "host"
path = "src/bin/host/main.rs"

[[bin]]
name = "guest"
path = "src/bin/guest.rs"

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.30"
windows-service = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.deb]
name = "wsl-memory-guest"
maintainer = "WSL Memory Agent Contributors"
copyright = "MIT"
depends = "systemd"
section = "admin"
priority = "optional"
assets = [
    ["target/release/guest", "usr/local/bin/wsl-memory-guest", "755"],
    ["debian/wsl-memory-guest.service", "lib/systemd/system/wsl-memory-guest.service", "644"],
]
maintainer-scripts = "debian/"
